tests/negative/symbols/capture.orng
fn main() -> Int {
    let x: Int = 45
    fn f() -> Int {
        x
    }
    f()
}